# Rod-Cut-Guloso-X-Rod-Cut-Iterativo

./: README.md  main.py  pyproject.toml  rod_cut_guloso.py  rod_cut_iterativo.py
