[tool.poetry]
name = "projetoanalise2"
version = "0.1.0"
description = ""
authors = ["herik00 <hherik96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
